infrastructure/k8s/abc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health-tracking
  annotations:
    # Bắt buộc chuyển hướng HTTP sang HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Yêu cầu cert-manager dùng ClusterIssuer vừa tạo để xin chứng chỉ
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Tăng kích thước body nếu upload ảnh/file 
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vuthanhdat04.id.vn
      secretName: frontend-tls-secret # Cert-manager sẽ lưu cert vào đây
    - hosts:
        - api.vuthanhdat04.id.vn
      secretName: api-tls-secret      # Cert-manager sẽ lưu cert vào đây
  rules:
    - host: vuthanhdat04.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
    - host: api.vuthanhdat04.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
